[package]
name = "no_std"
version = "0.1.0"
authors = ["Stefan Lankes <slankes@eonerc.rwth-aachen.de>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["operating systems", "kernel"]
categories = ["os"]
repository = "https://github.com/hermit-os/no_std"
description = "Example to boot HermitOS without std"

[dependencies]
hermit-kernel = { path = "./kernel", default-features = false }
log = { version = "0.4", default-features = false }

[features]
default = ["pci", "pci-ids", "fsgsbase", "smp", "acpi", "fs", "nostd"]
vga = ["hermit-kernel/vga"]
pci = ["hermit-kernel/pci"]
pci-ids = ["hermit-kernel/pci-ids"]
acpi = ["hermit-kernel/acpi"]
fsgsbase = ["hermit-kernel/fsgsbase"]
smp = ["hermit-kernel/smp"]
fs = ["hermit-kernel/fs"]
tcp = ["hermit-kernel/tcp"]
udp = ["hermit-kernel/udp"]
nostd = ["hermit-kernel/nostd"]